Simple_Ecommerce_App/Simple_Ecommerce_App/src/main/java/com/example/Simple_Ecommerce_App/Errors/DoubleRecordException.java
package com.example.Simple_Ecommerce_App.Errors;

public class DoubleRecordException extends RuntimeException{
    public DoubleRecordException() {
    }

    public DoubleRecordException(String message) {
        super(message);
    }
}
